# Resdex_NEW

./: .env.example  .gitignore  MatrixFeatures.py  README.md  app.py  architecture_diagram.md  groundtruth.txt  haversine.py  manager_output.csv  manager_queries.txt  output.csv  pyproject.toml  queries.txt  query_expansion_sample.py  requirements.txt  result_test.txt  results.txt  server.py  test.py  test_final.py  test_llm.py  test_query_relaxation.py  test_refinement.py
data/: department_dict.pickle  industry_dict.pickle  pgcourse_dict.pickle  ugcourse_dict.pickle  uginst_dict.pickle
data/final_df_with_cand/: part-00000-6478e569-59fa-4b90-8e1a-d2e1911d772b-c000.snappy.parquet  part-00001-6478e569-59fa-4b90-8e1a-d2e1911d772b-c000.snappy.parquet  part-00002-6478e569-59fa-4b90-8e1a-d2e1911d772b-c000.snappy.parquet  part-00003-6478e569-59fa-4b90-8e1a-d2e1911d772b-c000.snappy.parquet  part-00004-6478e569-59fa-4b90-8e1a-d2e1911d772b-c000.snappy.parquet  part-00005-6478e569-59fa-4b90-8e1a-d2e1911d772b-c000.snappy.parquet  part-00006-6478e569-59fa-4b90-8e1a-d2e1911d772b-c000.snappy.parquet  part-00007-6478e569-59fa-4b90-8e1a-d2e1911d772b-c000.snappy.parquet  part-00008-6478e569-59fa-4b90-8e1a-d2e1911d772b-c000.snappy.parquet  part-00009-6478e569-59fa-4b90-8e1a-d2e1911d772b-c000.snappy.parquet  (+178 more)
deployment/: __init__.py  deploy.py
eval/: __init__.py  test_eval.py
resdex_agent/: __init__.py  agent.py  base_agent.py  config.py  prompts.py
sample_location/: city_dict.pickle  coordinates.json  haversine.py  location_sample.py  test.py
tests/: __init__.py  test_agents.py
(+62 files in other folders)
